# agent-dhu-ci-agent

./: .dockerignore  .gitignore  DEPLOY_QUICKSTART.md  README.md  demo_stream.py  demo_stream_interactive.py  docker-compose.yml  init_mongodb.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test_aimessage_structure.py  test_chunk_details.py  test_complex.json  test_deepseek_thinking.py  test_hello.json  test_langchain_official.py  test_langchain_reasoning.py  test_llm_streaming.py  test_openai_sdk.py  test_reasoning.json  test_reasoning_block.py  test_request1.json  test_request2.json  test_request3.json  test_stream.py  test_stream_pretty.py  test_stream_thinking.py  test_thinking_params.py  启动服务.bat  测试服务.bat  部署指南.md
.claude/: settings.local.json
configs/: .env.example  logging.yaml
docker/: Dockerfile  docker-compose.yml
docs/: COMPANY_DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  FRONTEND_INTEGRATION.md  MONGODB_SETUP.md  PYC_PROTECTION.md  QUICKSTART.md  STREAMING_API.md  WINDOWS_STREAMING_GUIDE.md
scripts/: build-and-verify.ps1  build-and-verify.sh  deploy-package.ps1  deploy-server.sh
src/: config.py
src/agent/: devops_agent.py  memory.py  mongodb_memory.py  prompts.py
src/api/: dependencies.py  main.py
src/api/routes/: chat.py  (+3 more)
src/models/: database.py  mongodb.py  mongodb_models.py  orm.py  schemas.py
src/services/: analysis.py  report.py
src/tools/: artifactory.py  base.py  custom_backend.py  gerrit.py  jenkins.py  test_cases.py  test_coverage.py
src/utils/: agui_adapter.py  http_client.py  langchain_patch.py  logger.py
tests/: conftest.py
(+1 files in other folders)
